--- a/source/index.html
+++ b/source/index.html
@@ -3,16 +3,110 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Название проекта</title>
+  <title>Cat_energy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
 </head>
 
 <body class="page__body">
-  <header class="header">Шапка</header>
-  <p>Hi!</p>
-  <p>test8</p>
+  <header class="main-header">
+    <a class="main-header__logo" href="#">
+      <img src="#" width="33" height="38" alt="логотип">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">
+        <span class="visully-hidden">открыть меню</span>
+      </button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav__item--current"></li>
+          <li class="main-nav__item"></li>
+          <li class="main-nav__item"></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  < class="main-container">
+    <h1 class="visully-hidden">Cat_energy - Функциональное питание для котов</h1>
+    <section class="programs">
+      <div class="programs__wrapper">
+        <header class="programs__header">
+          <h2 class="programs__title">Функциональное питание для котов</h2>
+          <p class="programs__slogan">Занялся собой? Займись котом!</p>
+          <a class="programs__button" href="#">Подобрать программу</a>
+        </header>
+        <ul class="programs__list">
+          <li class="programs__item">
+            <h3 class="programs__item-title">Похудение</h3>
+            <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="programs__button" href="#">Каталог SLIM</a>
+          </li>
+          <li class="programs__item">
+            <h3 class="programs__item-title">Набор массы</h3>
+            <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="programs__button" href="#">Каталог PRO</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="about">
+      <div class="about__wrapper">
+        <h2 class="about__title">Как это работает</h2>
+        <ul class="about__list">
+          <li class="about__item">
+            <span class="about__icon"></span>
+            <p class="about__description">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="about__item">
+            <span class="about__icon"></span>
+            <p class="about__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="about__item">
+            <span class="about__icon"></span>
+            <p class="about__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
+          <li class="about__item">
+            <span class="about__icon"></span>
+            <p class="about__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="examples">
+      <div class="examples__wrapper">
+        <h2 class="examples__title">Живой пример</h2>
+        <p class="examples__description">"Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+        <ul class="examples__list">
+          <li class="examples__item">
+            <p class="examples__caption">5 кг</p>
+            <span class="examples__text">Снижение веса</span>
+          </li>
+          <li class="examples__item">
+            <p class="examples__caption">60 дней</p>
+            <span class="examples__text">Затрачено времени</span>
+          </li>
+        </ul>
+        <div class="examples__result">
+          <p class="examples__caption">Затраты на питание</p>
+          <span class="examples__text">15000 руб</span>
+        </div>
+        <div class="examples__photo">
+          <img src="#" width="560" height="512" alt="фото до и после">
+        </div>
+      </div>
+    </section>
+    <section class="contacts">
+      <div class="contacts__wrapper">
+        <h2 class="visully-hidden">Контакты</h2>
+        <p class="contacts__address">г. Москва, ул. Красная, д. 10</p>
+        <p class="contacts__phone">+7 (495) 123-45-67</p>
+      </div>
+    </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
