--- a/source/index.html
+++ b/source/index.html
@@ -99,13 +99,45 @@
     <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="visully-hidden">Контакты</h2>
-        <p class="contacts__address">г. Москва, ул. Красная, д. 10</p>
-        <p class="contacts__phone">+7 (495) 123-45-67</p>
+        <div class="contacts__address">
+          <p class="contacts__intro">приглашаем к сотрудничеству дилеров!</p>
+          <div class="contacts__container">
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <br> Санкт-Петербург</p>
+          </div>
+        </div>
+        <div class="contacts__map">
+          <img class="contacts__image" src="#" width="320" height="362" alt="карта г.Санкт-Петербург">
+        </div>
       </div>
     </section>
     </main>
     <footer>
-
+      <div class="footer__wrapper">
+        <div class="footer__logo"></div>
+        <div class="footer__social social">
+          <ul class="social__list">
+            <li class="social__item social__item--vk">
+              <a class="social__link" href="#">
+                <span class="visully-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="social__item social__item--youtube">
+              <a class="social__link" href="#">
+                <span class="visully-hidden">YouTube</span>
+              </a>
+            </li>
+            <li class="social__item social__item--Telegram">
+              <a class="social__link" href="#">
+                <span class="visully-hidden">Telegram</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__copyright copyright">
+          <p class="copyright__text">HTML Academy</p>
+          <img class="copyright__logo" src="#" width="27" height="34" alt="логотип HTML Academy">
+        </div>
+      </div>
     </footer>
 </body>
 
