исправление ошибок в базовой разметке

--- a/source/index.html
+++ b/source/index.html
@@ -20,14 +20,14 @@
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current"></li>
-          <li class="main-nav__item"></li>
-          <li class="main-nav__item"></li>
+          <li class="main-nav__item main-nav__item--current">Главная</li>
+          <li class="main-nav__item">Каталог продукции</li>
+          <li class="main-nav__item">Подбор программы</li>
         </ul>
       </div>
     </nav>
   </header>
-  < class="main-container">
+  <main class="main-container">
     <h1 class="visully-hidden">Cat_energy - Функциональное питание для котов</h1>
     <section class="programs">
       <div class="programs__wrapper">
@@ -110,35 +110,35 @@
         </div>
       </div>
     </section>
-    </main>
-    <footer>
-      <div class="footer__wrapper">
-        <div class="footer__logo"></div>
-        <div class="footer__social social">
-          <ul class="social__list">
-            <li class="social__item social__item--vk">
-              <a class="social__link" href="#">
-                <span class="visully-hidden">Вконтакте</span>
-              </a>
-            </li>
-            <li class="social__item social__item--youtube">
-              <a class="social__link" href="#">
-                <span class="visully-hidden">YouTube</span>
-              </a>
-            </li>
-            <li class="social__item social__item--Telegram">
-              <a class="social__link" href="#">
-                <span class="visully-hidden">Telegram</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer__copyright copyright">
-          <p class="copyright__text">HTML Academy</p>
-          <img class="copyright__logo" src="#" width="27" height="34" alt="логотип HTML Academy">
-        </div>
+  </main>
+  <footer>
+    <div class="footer__wrapper">
+      <div class="footer__logo"></div>
+      <div class="footer__social social">
+        <ul class="social__list">
+          <li class="social__item social__item--vk">
+            <a class="social__link" href="#">
+              <span class="visully-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item social__item--youtube">
+            <a class="social__link" href="#">
+              <span class="visully-hidden">YouTube</span>
+            </a>
+          </li>
+          <li class="social__item social__item--Telegram">
+            <a class="social__link" href="#">
+              <span class="visully-hidden">Telegram</span>
+            </a>
+          </li>
+        </ul>
       </div>
-    </footer>
+      <div class="footer__copyright copyright">
+        <p class="copyright__text">HTML Academy</p>
+        <img class="copyright__logo" src="#" width="27" height="34" alt="логотип HTML Academy">
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
