--- a/source/index.html
+++ b/source/index.html
@@ -111,7 +111,7 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="footer">
     <div class="footer__wrapper">
       <div class="footer__logo"></div>
       <div class="footer__social social">
