--- a/source/index.html
+++ b/source/index.html
@@ -111,10 +111,10 @@
       </div>
     </section>
   </main>
-  <footer class="footer">
-    <div class="footer__wrapper">
-      <div class="footer__logo"></div>
-      <div class="footer__social social">
+  <footer class="main-footer">
+    <div class="main-footer__wrapper">
+      <div class="main-footer__logo"></div>
+      <div class="main-footer__social social">
         <ul class="social__list">
           <li class="social__item social__item--vk">
             <a class="social__link" href="#">
@@ -133,7 +133,7 @@
           </li>
         </ul>
       </div>
-      <div class="footer__copyright copyright">
+      <div class="main-footer__copyright copyright">
         <p class="copyright__text">HTML Academy</p>
         <img class="copyright__logo" src="#" width="27" height="34" alt="логотип HTML Academy">
       </div>
