--- a/source/index.html
+++ b/source/index.html
@@ -21,8 +21,12 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--current">Главная</li>
-          <li class="main-nav__item">Каталог продукции</li>
-          <li class="main-nav__item">Подбор программы</li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">Подбор программы</a>
+          </li>
         </ul>
       </div>
     </nav>
