--- a/source/catalog.html
+++ b/source/catalog.html
@@ -213,27 +213,17 @@
         </div>
       </div>
     </section>
-    <section class="promotions">
-      <div class="promotions__wrapper">
-        <h2 class="promotions__title">Живой пример</h2>
-        <p class="promotions__description">"Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <ul class="promotions__list">
-          <li class="promotions__item">
-            <p class="promotions__caption">5 кг</p>
-            <span class="promotions__text">Снижение веса</span>
-          </li>
-          <li class="promotions__item">
-            <p class="promotions__caption">60 дней</p>
-            <span class="promotions__text">Затрачено времени</span>
-          </li>
-        </ul>
-        <div class="promotions__result">
-          <p class="promotions__caption">Затраты на питание</p>
-          <span class="promotions__text">15000 руб</span>
-        </div>
-        <div class="promotions__photo">
-          <img src="#" width="560" height="512" alt="фото до и после">
-        </div>
+    <section class="subscribe">
+      <div class="subscribe__wrapper">
+        <h2 class="subscribe__title">Акции и новинки</h2>
+        <p class="subscribe__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
+        <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="subscribe__label" for="email">Ваш email</label>
+          <div class="subscribe__container">
+            <input class="subscribe__input" type="email" name="email" id="email" placeholder="Ваш email">
+            <button class="subscribe__button" type="submit">Подписаться</button>
+          </div>
+        </form>
       </div>
     </section>
     <section class="contacts">
