--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,9 +20,13 @@
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current">Главная</li>
+          <li class="main-nav__item main-nav__item--current">
+            <a class="main-nav__link" href="index.html">Главная</a>
+          </li>
           <li class="main-nav__item">Каталог продукции</li>
-          <li class="main-nav__item">Подбор программы</li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">Подбор программы</a>
+          </li>
         </ul>
       </div>
     </nav>
